acc/acc-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: acc-server
    app.kubernetes.io/part-of: acc-server
  name: acc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: acc-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: acc-server
    spec:
      containers:
      - name: acc-server
        image: dev.registry.pivotal.io/app-accelerator/acc-server:1.0.0-SNAPSHOT-2021-03-02T21-41-25Z
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        resources:
          limits:
            cpu: 1
            memory: 768Mi
          requests:
            cpu: 500m
            memory: 768Mi
        volumeMounts:
        - mountPath: /app/runtime/config
          name: config
          readOnly: true
        - mountPath: /app/data
          name: data
      imagePullSecrets:
      - name: acc-image-regcred
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      volumes:
      - name: config
        configMap:
          name: acc-server
      - name: data
        persistentVolumeClaim:
          claimName: accdb
