acc/acc-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acc-server
    app.kubernetes.io/name: acc-server
  name: acc-server
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: acc-server
    app.kubernetes.io/name: acc-server
  #type: LoadBalancer
