acc/acc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: acc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: acc.{HOST_NAME}
      http:
        paths:
          - path: "/"
            backend:
              serviceName: acc-server
              servicePort: 8080
